[gd_scene load_steps=5 format=3 uid="uid://c2aqei0hn7p0i"]

[ext_resource type="Script" path="res://scenes/editor/editor.gd" id="1_kc7ew"]
[ext_resource type="PackedScene" uid="uid://dune37rr6enjq" path="res://scenes/editor/editor_gui.tscn" id="2_hil8e"]
[ext_resource type="PackedScene" uid="uid://csepui5tqplcu" path="res://scenes/tile_map.tscn" id="3_mgmka"]
[ext_resource type="Texture2D" uid="uid://dk4ey7feh20uw" path="res://scenes/editor/sprites/cursor.png" id="4_o6oix"]

[node name="Editor" type="Node2D"]
script = ExtResource("1_kc7ew")

[node name="TileMap" parent="." instance=ExtResource("3_mgmka")]

[node name="Highlight" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_o6oix")

[node name="Green" type="ColorRect" parent="Highlight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0.933333, 0.537255, 0.584314)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(175, 100)

[node name="EditorGUI" parent="Camera2D" instance=ExtResource("2_hil8e")]
z_index = 10
offset_left = -175.0
offset_top = -100.0
offset_right = 175.0
offset_bottom = -100.0

[connection signal="button_down" from="Highlight" to="." method="_on_highlight_pressed"]
[connection signal="button_up" from="Highlight" to="." method="_on_highlight_released"]
